# sa3ed_app

./: README.md  pyproject.toml
sa3ed_app/: hooks.py  modules.txt
sa3ed_app/Utils/: DateHelper.py  FileHandler.py  Localization.py
sa3ed_app/api/: ApiEndPoint.py  CaseStatus.py  FoundPersonEndPoints.py  LostPersonEndPoints.py  Sa3edAddressEndPoints.py  UserSearch.py  WhitelistBypass.py  ai_matcher.py  api_endpoint.py  case_status.py  countries.py  found_person.py  foundedpersonendpoint.py  lost_person.py  lost_person_endpoints.py  sa3ed_address.py  sa3ed_address_endpoints.py  user_search.py
sa3ed_app/templates/: sa3ed_base_template.html  sa3ed_web_base_template.html
sa3ed_app/translations/: ar.csv
sa3ed_app/utils/: DateHelper.py  date_helper.py  file_handler.py
sa3ed_app/www/: countries.json
sa3ed_app/www/disclaimer/: index.css  index.html
sa3ed_app/www/found_person/: index.html  index.js
sa3ed_app/www/found_person_create/: index.css  index.html  index.js
sa3ed_app/www/found_person_create_detail/: index.css  index.html  index.js
sa3ed_app/www/found_person_create_detail_2/: index.css  index.html  index.js
sa3ed_app/www/found_person_search/: index.py
sa3ed_app/www/home/: index.html
sa3ed_app/www/lost_person_create/: index.css  index.html  index.js
sa3ed_app/www/lost_person_create_detail/: index.css  index.html  index.js
sa3ed_app/www/lost_person_create_detail_2/: index.css  index.html  index.js
sa3ed_app/www/lost_person_create_detail_3/: index.css  index.html  index.js
sa3ed_app/www/lost_person_search/: index.css  index.html  index.js
(+47 files in other folders)
