[project]
name = "sa3ed_app"
authors = [
    { name = "LavaLoon", email = "info@lavaloon.com"}
]
description = "Charity app to help people to find their lost people and objects."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.21.1",
    "geopy>=2.4.1"
    "face-recognition>=1.3.0",
    "dlib>=19.24.0",
    "Pillow>=9.0.0",
    "numpy>=1.20.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
